css/styles.css
:root {

    /**
     * colors 
     */
  
    --red-orange-crayola: hsl(0, 100%, 66%);
    --space-cadet: hsl(249, 37%, 19%);
    --pistachio: hsl(88, 50%, 60%);
    --cultured: hsl(220, 13%, 95%);
    --saffron: hsl(45, 91%, 58%);
    --rhythm: hsl(240, 9%, 51%);
    --white: hsl(0, 0%, 100%);
}
    /**
     * typography 
     */

/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
  font-size: 62.5%;
}

html {
    font-family: "Rubik", sans-serif;
    scroll-behavior: smooth;
  }

/* Remove default margin */
body,
h1,
h2,
h3,
h4,
p,
figure,
blockquote,
dl,
dd {
  margin: 0;
  
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role='list'],
ol[role='list'] {
  list-style: none;
}

/* Set core root defaults */
html:focus-within {
  scroll-behavior: smooth;
}

/* Set core body defaults */
body {
  min-height: 100vh;
  text-rendering: optimizeSpeed;
  line-height: 1.5;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img,
picture {
  max-width: 100%;
  display: block;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
  font: inherit;
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
  html:focus-within {
   scroll-behavior: auto;
  }
  
  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

.container {
    width: 1440px;
    margin: 0 auto;
    background: var(--white);
    overflow: hidden;
  }


.navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: rgba(255, 255, 255, 0.99);
    border-bottom: 1px solid hsla(0, 0%, 0%, 0.05);
    box-shadow: 0 0 10px hsl(0deg 0% 0% / 5%);
    color: white;
    width: 100%;
    position: fixed;
}

.navbar-logo {
    font-size: 2rem;
    margin: 0 .5rem;
    text-decoration: none;
    color: var(--space-cadet)
}

.navbar-logo i {
    font-size: 2.5rem;
    color: orange;
}

.navbar-links ul {
    margin: 0;
    padding: 0;
    display: flex;
}

.navbar-links li {
    list-style: none;
}

.navbar-links li a {
    font-size: 1.6rem;
    text-decoration: none;
    color: var(--space-cadet);
    padding: 1rem;
    margin-right: 2rem;
    display: block;
}

.navbar-links li:hover {
    background-color: #555;
}

.toggle-button {
    position: absolute;
    top: 1.5rem;
    right: 3rem;
    flex-direction: column;
    justify-content: space-between;
    display: none;
    width: 25px;
    height: 18px;
}

.toggle-button .bar {
    height: 3px;
    width: 100%;
    background-color: hsl(249, 37%, 19%);;
    border-radius: 10px;
    overflow: hidden;

}



main {
    background: var(--white);
    padding: 3rem;
    text-align: center;
    margin: 0 auto;
}

.home {
    width: 100%;
    margin: 0 auto;
}

.home-heading {
    color: var(--space-cadet);
    font-size: 3.1rem;
    padding: 1.3rem;
}

.home-subtext {
    background: var(--cultured);
    color: var(--space-cadet);
    font-size: 1.6rem;
    display: inline-block;
    padding: .7rem 2.5rem;
    margin: 10rem 0 3rem;
}

.home-text {
    color: var(--rhythm);
    font-size: 1.6rem;
    margin: 0 auto;
    padding: 1rem;
}

.main-heading {
    margin: 1rem;
}

.about-content {
    text-align: start;
}

.icons a {
    font-size: 2.5rem;
    text-decoration: none;
    color: orange;
    margin: 1.5rem 2rem;
}

.fa span {
    color: #333;
    margin: .5rem;
}

.button {
    background-color: var(--saffron);
    font-size: 1.4rem;
    border: none;
    padding: .7em;
    margin: .5em;
}

.button i {
    font-size: 3rem;
}

.section-title {
    color: var(--space-cadet);
    font-size: 2.5rem;
    margin-top: 2rem;
}

.about {
    width: 90%;
    height: 30%;
    margin: 10em auto;
}


.about-content {
    text-align: left;
    display: flex;
    flex: 1;
}

.about-img {
    margin: 0 auto;
    width: 90%;
}

.about-text {
    font-size: 1.6rem;
    color: var(--rhythm);
    margin: 1em auto;
    padding: 1rem 0;
}

.about-right img {
    width: 40%;
}

.services {
    margin: 0 auto;
    width: 90%;
    text-align: left;
    display: flex;
    flex-wrap: wrap;
}

.service-card {
    width: 33%;
}

.card-number {
    font-family: Monoton, cursive;
    font-size: 4.2rem;
    color: var(--saffron);
    padding: .5rem;
}

.card-heading {
    font-size: 2rem;
    color: var(--space-cadet);
}

.card-text {
    font-size: 1.6rem;
    color: var(--rhythm);
    padding: .5rem;
    width: 70%;
}

.break {
    flex-basis: 100%;
    height: 0;
  }
/* MEDIA QUERIES */

@media (max-width: 800px){

    .container {
        width: 100%;
    }
    
    .toggle-button {
        display: flex;
        overflow: visible;
    }

    .navbar-links {
        display: none;
        width: 100%;
    }

    .navbar {
        flex-direction: column;
        align-items: flex-start;
        padding: 1rem 4rem;
    }

    

    .navbar-links ul {
        width: 100%;
        flex-direction: column;
    }
    .navbar-links li {
        text-align: center;
    }
    .navbar-links li a {
        padding: .5rem 1rem;
    }

    .navbar-links.active {
        display: flex;
        overflow: hidden;

    }

    .about-content {
        text-align: left;
        display: flex;
        flex-direction: column;
    }

    .about-img {
        margin: 0 auto;
        width: 100%;
    }

    .services {
    flex-direction: column;
    width: 100%;
    }

    .card-text , .service-card{
        width: 100%;
    }
}

